# Dynamics365-BC-UNS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  app.json
.github/workflows/: build.yml  release.yml
Translations/: ShopfloorExecutionBridge.de-DE.xlf
assets/: architecture-overview.mmd  data-model.mmd  sequence-full-cycle.mmd  sequence-idempotency.mmd  sequence-out-of-order.mmd  sequence-topic-discovery.mmd
dev/bridge/: README.md  pyproject.toml
dev/bridge/bridge/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py
dev/bridge/bridge/commands/: events.py  inbox.py  mappings.py  orders.py  setup.py
dev/bridge/gui/: app.py
dev/bridge/gui/pages/: 1_Work_Orders.py  2_Work_Order_Routing.py  3_Shopfloor_Execution.py  4_UNS_Mapping.py
dev/scripts/: list-companies.sh
docs/: implementation-plan-v3.md
docs/plans/: 2026-05-01-erp-context-audit-contract-release.md
scripts/: list-prod-orders.sh  set-token.sh  test-api.sh
src/API/: ALPExecutionCorrectionsAPI.Page.al  ALPExecutionEventsAPI.Page.al  ALPExecutionTimeAttributionsAPI.Page.al  ALPIntegrationInboxAPI.Page.al  ALPItemsAPI.Page.al  ALPOutputInboxAPI.Page.al  ALPProdOrderComponentsAPI.Page.al  ALPProdOrderRoutingAPI.Page.al  ALPProductionOrdersAPI.Page.al  ALPRoutingsAPI.Page.al  ALPShopCalendarWorkingDaysAPI.Page.al  ALPShopCalendarsAPI.Page.al  ALPUNSTopicMappingAPI.Page.al  ALPWorkCentersAPI.Page.al  ALPWorkLogEntriesAPI.Page.al  (+1 more)
test/: ALPExecutionIngestionTests.Codeunit.al  ALPInstallTests.Codeunit.al  ALPPermissionsTests.Codeunit.al  app.json
(+35 files in other folders)
