[project]
name = "bridge"
version = "0.1.0"
description = "Bridge Emulator CLI for Business Central Shopfloor API"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "streamlit>=1.40",
    "watchdog"
]

[project.scripts]
bridge = "bridge.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge"]
